--- a/BeerlandWeb/Views/Shared/_Layout.cshtml
+++ b/BeerlandWeb/Views/Shared/_Layout.cshtml
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>@ViewData["Title"]</title>
-    </head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+</head>
 <body>
 
 <div id="app">
