Add vertical line separator to app-bar and test props to date picker

--- a/BeerlandWeb/Views/Statistic/Index.cshtml
+++ b/BeerlandWeb/Views/Statistic/Index.cshtml
@@ -5,7 +5,7 @@
 
 <Statistic-Page>
     <template v-slot:date-selector>
-        <Date-Picker />
+        <Date-Picker test="Test string" testNum=Number(1213) />
     </template>
     <template v-slot:statistic-drawer>
         <Statistic-Drawer />
