--- a/BeerlandWeb/Views/Home/Index.cshtml
+++ b/BeerlandWeb/Views/Home/Index.cshtml
@@ -3,9 +3,10 @@
     Layout = "_Layout";
 }
 
+<h1 align="center">Just home page</h1>
 <Home-Page></Home-Page>
 
 @section Scripts
 {
-    <script src="@Url.Content("~/dist/common.bundle.js")"></script>
+    <script src="@Url.Content("~/dist/home.bundle.js")"></script>
 }
