Changed logic of starting vue app.

--- a/BeerlandWeb/Views/Shared/_Layout.cshtml
+++ b/BeerlandWeb/Views/Shared/_Layout.cshtml
@@ -8,11 +8,9 @@
 <body>
 
 <div id="app">
-    <App-Container>
-        <App-Bar>
-            @RenderBody()
-        </App-Bar>
-    </App-Container>
+    <v-app>
+        @RenderBody()
+    </v-app>
 </div>
 
 @RenderSection("Scripts", required: false)
