--- a/BeerlandWeb/Views/Home/Index.cshtml
+++ b/BeerlandWeb/Views/Home/Index.cshtml
@@ -3,8 +3,9 @@
     Layout = "_Layout";
 }
 
-<h1 align="center">Just home page</h1>
-<Home-Page></Home-Page>
+<App-Bar>
+    <h1 align="center"><a href="/statistic/index">View statistic</a></h1>
+</App-Bar>
 
 @section Scripts
 {
