Created 2-way binding for date between datepicker and index page.

--- a/BeerlandWeb/Views/Statistic/Index.cshtml
+++ b/BeerlandWeb/Views/Statistic/Index.cshtml
@@ -5,10 +5,10 @@
 
 <div class="d-flex flex-row">
     <div class="col-3">
-        <Date-picker />
+        <Date-picker :date.sync="selectedDate" />
     </div>
     <div style="margin: 12px;">
-        <Statistic-drawer />
+        <Statistic-drawer  />
     </div>
 </div>
 
