Add input parameter to statistic drawer with data, created interface for rendering data in statistic drawer

--- a/BeerlandWeb/Views/Statistic/Index.cshtml
+++ b/BeerlandWeb/Views/Statistic/Index.cshtml
@@ -8,7 +8,7 @@
         <Date-picker :date.sync="selectedDate" />
     </div>
     <div class="col-10" >
-        <Statistic-drawer />
+        <Statistic-drawer v-bind:series="series" v-bind:categories="categories" />
     </div>
 </div>
 
