--- a/BeerlandWeb/Views/Statistic/Index.cshtml
+++ b/BeerlandWeb/Views/Statistic/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="d-flex flex-row">
     <div class="col-2">
-        <Date-picker :date.sync="selectedDate" />
+        <Date-picker v-on:pick="onDatePickHandler" />
     </div>
     <div class="col-10" >
         <Statistic-drawer v-bind:series="series" v-bind:categories="categories" />
