Add IUserPasswordStore for using in userManager, ProfileService for IdentityServer.

--- a/BeerlandWeb/Views/Auth/Index.cshtml
+++ b/BeerlandWeb/Views/Auth/Index.cshtml
@@ -5,7 +5,7 @@
 
 <v-container class="col-4 mt-10">
     <h2 align="center">Login</h2>
-    <v-form ref="form">
+    <v-form ref="form" class="d-flex flex-column">
         <v-text-field
             v-model="login"
             label="login"
