--- a/BeerlandWeb/Views/Auth/Index.cshtml
+++ b/BeerlandWeb/Views/Auth/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Runtime.CompilerServices
+@{
     ViewBag.Title = "Login";
     Layout = "_Layout";
 }
@@ -6,28 +7,31 @@
 <v-container class="col-4 mt-10">
     <h2 align="center">Login</h2>
     <v-form ref="form" class="d-flex flex-column">
+        <v-alert
+            v-if="showAuthError"
+            color="red lighten-2"
+            dark>
+            Authentication error
+        </v-alert>
         <v-text-field
             v-model="login"
             label="login"
-            required
-            >
+            required>
         </v-text-field>
         <v-text-field
             v-model="password"
             :append-icon="showPassword ? 'mdi-eye' : 'mdi-eye-off'"
             :type="showPassword ? 'text' : 'password'"
             label="Password"
-            v-on:click:append="showPassword = !showPassword"
-        >
+            v-on:click:append="showPassword = !showPassword">
         </v-text-field>
         <v-btn depressed
                align="center"
                class="mt-3"
                v-on:click="loginHandler"
-               color="primary"
-               >
+               color="primary">
             Login
-            </v-btn>
+        </v-btn>
     </v-form>
 </v-container>
 
