Add middleware for exception handling. Updated authentication process.

--- a/BeerlandWeb/Views/Home/Index.cshtml
+++ b/BeerlandWeb/Views/Home/Index.cshtml
@@ -4,6 +4,8 @@
 }
 
 <h1 align="center"><a href="/statistic/index">View statistic</a></h1>
+<h1 align="center"><a href="/Auth/test">Check security / redirect to exception page</a></h1>
+
 
 @section Scripts
 {
