--- a/BeerlandWeb/Views/Auth/Index.cshtml
+++ b/BeerlandWeb/Views/Auth/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Runtime.CompilerServices
-@{
+﻿@{
     ViewBag.Title = "Login";
     Layout = "_Layout";
 }
@@ -8,10 +7,11 @@
     <h2 align="center">Login</h2>
     <v-form ref="form" class="d-flex flex-column">
         <v-alert
-            v-if="showAuthError"
+            v-if="showError"
             color="red lighten-2"
+            align="center"
             dark>
-            Authentication error
+            {{errorMessage}}
         </v-alert>
         <v-text-field
             v-model="login"
