--- a/BeerlandWeb/Views/Auth/Index.cshtml
+++ b/BeerlandWeb/Views/Auth/Index.cshtml
@@ -11,7 +11,8 @@
             color="red lighten-2"
             align="center"
             dark>
-            {{errorMessage}}
+            <p>{{errorMessage}}</p>
+            <p>ID: {{errorId}}</p>
         </v-alert>
         <v-text-field
             v-model="login"
