Completed Production Unit Approving page and logic for it. Reformatted code style of project. Updated DatePicker component. Add state to ProductionUnit model

--- a/BeerlandWeb/Views/Auth/Index.cshtml
+++ b/BeerlandWeb/Views/Auth/Index.cshtml
@@ -8,9 +8,9 @@
     <v-form ref="form" class="d-flex flex-column">
         <v-alert
             v-if="showError"
-            color="red lighten-2"
-            align="center"
-            dark>
+            prominent
+            type="error"
+            align="center">
             <p>{{errorMessage}}</p>
             <p>ID: {{errorId}}</p>
         </v-alert>
