--- a/BeerlandWeb/Views/Home/Index.cshtml
+++ b/BeerlandWeb/Views/Home/Index.cshtml
@@ -1,13 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Beerland";
+    ViewBag.Title = "Homepage";
     Layout = "_Layout";
 }
 
-<h1 align="center"><a href="/statistic/index">View statistic</a></h1>
-<h1 align="center"><a href="/Auth/test">Check security / redirect to exception page</a></h1>
-
-
-@section Scripts
-{
-    <script src="@Url.Content("~/dist/home.bundle.js")"></script>
-}
+<h2 align="center">Home page</h2>
