--- a/BeerlandWeb/Views/ProductionUnit/UnitStorage.cshtml
+++ b/BeerlandWeb/Views/ProductionUnit/UnitStorage.cshtml
@@ -31,8 +31,8 @@
         </v-list>
     </div>
     <div class="col-10">
-        <h2 v-if="history.length>0" class="mb-4">Current volume: 12 barrel</h2>
-        <h2 v-else class="mb-4">Current volume is empty</h2>
+        <h2 v-if="history.length>0" class="mb-4">Current volume: {{actualVolume}} barrel</h2>
+        <h2 v-else class="mb-4">Storage of this beer mark is empty</h2>
         <v-data-table
             :headers="headers"
             :items="history"
