--- a/BeerlandWeb/Views/Shared/_Layout.cshtml
+++ b/BeerlandWeb/Views/Shared/_Layout.cshtml
@@ -1,21 +1,22 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>@ViewData["Title"]</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    @RenderSection("Styles", false)
 </head>
 <body>
 
 <div id="app">
     <v-app>
         <app-bar>
-        @RenderBody()
+            @RenderBody()
         </app-bar>
     </v-app>
 </div>
 
-@RenderSection("Scripts", required: false)
+@RenderSection("Scripts", false)
 
 </body>
 </html>
