Updated alerts on unit approve page. Updated unit repository.

--- a/BeerlandWeb/Views/ProductionUnit/UnitApprovement.cshtml
+++ b/BeerlandWeb/Views/ProductionUnit/UnitApprovement.cshtml
@@ -9,10 +9,17 @@
     </div>
     <div class="col-9">
         <v-alert
-            v-if="showAlert"
+            v-if="showSuccess"
             dense
             type="success">
             Unit approved
+        </v-alert>
+        <v-alert
+            v-if="showError"
+            prominent
+            dense
+            type="error">
+            Something went wrong
         </v-alert>
         <v-data-table
             :headers="headers"
